[tool.poetry]
name = "random-string-generator"
version = "0.1.0"
description = ""
authors = ["Jack Coutts <jackwgcoutts@proton.me>"]
readme = "README.md"
packages = [{include = "random_string_generator", from="src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14" 


pyinstaller = "^6.11.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rnd_str = "random_string_generator.main:main"



